// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reel renders 1`] = `
<select
  className="sc-eirfIE sc-hfufsb dWgfwl MGmJl"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Reel renders RTL 1`] = `
<div
  dir="rtl"
>
  <select
    className="sc-eirfIE sc-hfufsb dWgfwl bTHazS"
    dir="rtl"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</div>
`;

exports[`Reel renders as disabled 1`] = `
<select
  className="sc-eirfIE sc-hfufsb dWgfwl MGmJl"
  disabled={true}
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Reel renders as full-width 1`] = `
<select
  className="sc-eirfIE sc-hfufsb dWgfwl eKXVDa"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Reel renders with flex evenly spaced by default 1`] = `
<select
  className="sc-eirfIE sc-hfufsb dWgfwl MGmJl"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Reel renders with flex with adjusted input size 1`] = `
<select
  className="sc-eirfIE sc-hfufsb dWgfwl MGmJl"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Reel renders with label 1`] = `
<label
  className="sc-jUwIko"
>
  <span
    className="sc-dmWEhm cSIfqU"
  >
    Label Content
  </span>
  <select
    className="sc-eirfIE sc-hfufsb dWgfwl MGmJl"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;
